omni_converter/service.yml
apiVersion: v1
kind: Service
metadata:
  name: omni-converter
  namespace: omni-converter
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: omni-converter
