omni_converter/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: omni-converter
  namespace: omni-converter
spec:
  tls:
    - hosts:
        - omni_conv.lab.qstetten.de
      secretName: omni-converter-cert
  rules:
    - host: "omni_conv.lab.qstetten.de"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: omni-converter
                port:
                  number: 80
